MODDICONV-429: Upgrade module to Vert.x 5.0